# Mania-

./: .gitignore  .travis.yml  CHANGELOG.txt  CMakeLists.txt  README.md  _config.yml  build.sh  comparison.md  config.dist.yaml  index.md  install.sh  maniapp.sql  plugin-creation.md  versioning.md
_includes/: contents.html  header.html
_layouts/: default.html  frontpage.html  header.html  page.html
assets/css/: navbar.css
doc/: Doxyfile  generate.sh
docs/develop/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeLists_8txt.html  Config_8cpp.html  Config_8h.html  Config_8h_source.html  GbxMessage_8cpp.html  GbxMessage_8h.html  GbxMessage_8h_source.html  GbxParameter_8cpp.html  GbxParameter_8h.html  GbxParameter_8h_source.html  GbxParameters_8h.html  GbxParameters_8h_source.html  GbxRemote_8cpp.html  GbxRemote_8h.html  GbxRemote_8h_source.html  GbxResponse_8cpp.html  GbxResponse_8h.html  GbxResponse_8h_source.html  GbxStructs_8h.html  GbxStructs_8h_source.html  Hex_8h.html  Hex_8h_source.html  README_8md.html  Socket_8cpp.html  Socket_8h.html  Socket_8h_source.html  TargetDirectories_8txt.html  TcpClient_8cpp.html  TcpClient_8h.html  TcpClient_8h_source.html  Version_8h.html  Version_8h_source.html  annotated.html  classConfig-members.html  classConfig.html  classGbxMessage-members.html  classGbxMessage.html  (+60 more)
docs/develop/html/: CallBackManager_8h_source.html  ChatCommand_8h_source.html  CommandManager_8h_source.html  Config_8cpp.html  Config_8h.html  Config_8h_source.html  Database_8h_source.html  EventManager_8h_source.html  Events_2Structs_8h_source.html  Formatting_8h_source.html  GZip_8h_source.html  GameMode_8h_source.html  GbxCallBack_8cpp.html  GbxCallBack_8h.html  GbxCallBack_8h_source.html  GbxMessage_8cpp.html  GbxMessage_8h.html  GbxMessage_8h_source.html  GbxParameter_8cpp.html  GbxParameter_8h.html  GbxParameter_8h_source.html  GbxParameters_8h.html  GbxParameters_8h_source.html  GbxRemote_8cpp.html  GbxRemote_8h.html  GbxRemote_8h_source.html  GbxResponse_8cpp.html  GbxResponse_8h.html  GbxResponse_8h_source.html  GbxServerResponse_8cpp.html  GbxServerResponse_8h.html  GbxServerResponse_8h_source.html  GbxStructs_8h.html  GbxStructs_8h_source.html  Hex_8h.html  Hex_8h_source.html  Logging_8h.html  Logging_8h_source.html  ManiaPP_8cpp.html  ManiaPP_8h.html  (+255 more)
docs/develop/latex/: GbxCallBack_8cpp.tex  GbxCallBack_8h.tex  GbxMessage_8cpp.tex  GbxMessage_8h.tex  GbxParameter_8cpp.tex  GbxParameter_8h.tex  GbxParameters_8h.tex  GbxRemote_8cpp.tex  GbxRemote_8h.tex  GbxResponse_8cpp.tex  GbxResponse_8h.tex  GbxServerResponse_8cpp.tex  GbxServerResponse_8h.tex  GbxStructs_8h.tex  Hex_8h.tex  Logging_8h.tex  ManiaPP_8cpp.tex  ManiaPP_8h.tex  Map_8h.tex  Player_8h.tex  TcpClient_8h.tex  annotated.tex  classCallBackManager.tex  classCommandManager.tex  classConfig.tex  classDatabase.tex  classEventManager.tex  classFormatting.tex  classGZip.tex  classGameModeConverter.tex  classGbxCallBack.tex  classGbxMessage.tex  classGbxParameter.tex  classGbxParameters.tex  classGbxRemote.tex  classGbxResponse.tex  classGbxResponseParameter.tex  classGbxServerResponse.tex  classGbxStructParameters.tex  classHex.tex  (+67 more)
docs/develop/search/: all_0.js  all_1.js  all_9.js  all_d.js  classes_1.js  defines_6.js  files_1.js  files_2.js  files_7.js  functions_0.js  functions_6.js  functions_8.js  functions_9.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_7.js  variables_d.js
docs/master/html/: CallBackManager_8h_source.html  CommandManager_8h_source.html  Config_8cpp.html  Config_8h.html  Config_8h_source.html  Database_8h_source.html  EventManager_8h_source.html  Events_2Structs_8h_source.html  GbxCallBack_8cpp.html  GbxCallBack_8h.html  GbxCallBack_8h_source.html  GbxMessage_8cpp.html  GbxMessage_8h.html  GbxMessage_8h_source.html  GbxParameter_8cpp.html  GbxParameter_8h.html  GbxParameter_8h_source.html  GbxParameters_8h.html  GbxParameters_8h_source.html  GbxRemote_8cpp.html  GbxRemote_8h.html  GbxRemote_8h_source.html  GbxResponse_8cpp.html  GbxResponse_8h.html  GbxStructs_8h.html  (+236 more)
lib/: .gitignore
plugins/AdminPlayers/: CMakeLists.txt
plugins/Dedimania/: CMakeLists.txt
plugins/Dedimania/src/: DedimaniaConnection.cpp  DedimaniaPlugin.cpp  DedimaniaPlugin.h  DedimaniaUI.cpp  main.cpp
plugins/Dedimania/src/Objects/: DediRecord.h
plugins/Dedimania/src/Widget/: DedimaniaWidget.cpp  DedimaniaWidget.h
plugins/HelloGoodbye/: CMakeLists.txt
plugins/Jukebox/: CMakeLists.txt
plugins/Jukebox/src/: JukeboxPlugin.cpp  JukeboxPlugin.h  JukeboxUI.cpp  main.cpp
plugins/Karma/: CMakeLists.txt
plugins/LocalRecords/: CMakeLists.txt
plugins/LocalRecords/src/: LocalRecordsList.h  LocalRecordsPlugin.cpp  LocalRecordsPlugin.h  LocalRecordsUI.cpp  main.cpp
plugins/LocalRecords/src/Objects/: LocalRecord.h
plugins/LocalRecords/src/Widget/: LocalRecordsWidget.cpp  LocalRecordsWidget.h
plugins/MapWidget/: CMakeLists.txt
src/: ManiaPP.cpp  ManiaPP.h  main.cpp
src/CallBacks/: CallBackManager.cpp  CallBackManager.h
src/Commands/: ChatCommand.h  CommandManager.cpp  CommandManager.h  CommandsList.cpp  CommandsUI.cpp
src/Config/: Config.cpp  Config.h  Version.h.in
src/Database/: Database.cpp  Database.h
src/Events/: EventManager.cpp  EventManager.h  Structs.h
src/GbxRemote/: GbxMessage.cpp  GbxMessage.h  GbxParameter.cpp  GbxParameter.h  GbxParameters.h  GbxRemote.cpp  GbxRemote.h  GbxResponse.cpp  GbxResponse.h  GbxStructs.h
src/Maps/: MapList.cpp  MapList.h
src/Methods/: Methods.cpp  Methods.h  Structs.h
src/Objects/: Map.h  Player.h
src/Permissions/: Permission.h
src/Plugin/: PluginManager.cpp  PluginManager.h
src/Plugins/: Plugin.h  PluginHandler.cpp  PluginHandler.h  PluginManager.cpp  PluginManager.h  PluginsUI.cpp
src/Socket/: Socket.cpp  Socket.h  TcpClient.cpp  TcpClient.h
src/UI/: UIFrame.h  UIList.h  UIManager.cpp  UIManager.h
src/Utils/: Formatting.h  GZip.h  GameMode.h  Hex.h  Logging.h  Parameter.h  Text.h  Time.h  VersionCompare.h
src/Version/: VersionChecker.cpp  VersionChecker.h
(+227 files in other folders)
